[tool.poetry]
name = "namiko"
version = "0.1.0"
description = "An epoll I/O based webserver"
authors = ["Xiao Tan <tvytlx@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.2"
click = "^7.0"
http-parser = "^0.9.0"
gevent = "^20.5.0"
requests = "^2.23.0"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[tool.poetry.scripts]
namiko = 'cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
